src/trade/tradeDialog.css
.trade-dialog {
    padding: 0 !important;
    position: relative;
    overflow-x: hidden !important;
}
.trade-dialog .text-align-center { text-align: center; }
.trade-dialog .bold { font-weight: bold; }
.trade-dialog .text-vertical-align { line-height:2em; }
.trade-dialog .no-wrap { white-space: nowrap; }
.trade-dialog .dotted-underline { border-bottom: 1px dotted #000; }
.trade-dialog .box-shadow { box-shadow: 5px 5px 8px rgba(0,0,0,0.25); }

/* .trade-fields contains all the form fields */
.trade-dialog .trade-fields {
  position: relative;
  height: 100%;
  width: 100%;
}
/* .trae-conf comes from tradeConf.js module */
.trade-dialog .trade-conf {
    left:-350px;
    position: absolute;
    height: 100%;
    width: 100%;
    top: 0;
}

.trade-fields .error { background: #fef1cf; }

.trade-fields .ui-selectmenu-button { border-radius: 5px !important; }

.trade-fields ul li select.contract-category-display + .ui-selectmenu-button { width: 160px !important; }

.trade-fields .categories-row li.tick-quote {
  position: relative;
  top: 4px;
  left: 40px;
}
.trade-fields .categories-row li.tick-quote span {
  background: #29ABE2;
  text-align: center;
  display: inline-block;
  min-width: 60px;
  border-radius: 5px;
  padding:3px;
  color: white;
}
.trade-fields .categories-row li.tick-quote span.down { background: #c03; }

/* style elments in the drop down*/
.trade-dialog-date-start-ul li {
    height:10px;
    font-size:13px;
    text-align:center;
}
/* this will be added to jquery ui widget which is outside of the .trade-fields container */
.trade-dialog-date-start-ul {
    height: 240px;
}
/* this will be added to jquery ui widget which is outside of the .trade-fields container */
.trade-dialog-digits-select-ul:hover { margin-top: -20px; }
.trade-dialog-digits-select-ul { transition: margin-top 0.5s ease; }
.trade-dialog-digits-select-ul li {
    overflow-y:hidden;
    /*height:10px;*/
    line-height: 8px;
    font-size:13px;
    text-align:center;
    margin-top: 0px;
    padding:0;
}

/*#region input type=number */
.trade-fields input[type="number"]::-webkit-outer-spin-button,
.trade-fields [type="number"]::-webkit-inner-spin-button {
    -webkit-appearance: none;
    margin: 0;
}
.trade-fields [type="number"] {
    -moz-appearance: textfield;
}

.trade-fields span.ui-spinner {
    background: none;
    border:none;
    margin-bottom:5px;
}

.trade-fields input[type=number],
.trade-fields input[type=text] {
    outline: 0;
    border:none;
    border-radius:5px;
    height: 30px;
    margin:0;
    text-align:center;
    background: #273051;
    color:white;
}
.trade-fields input[step] {
    padding-right: 15px;
}

.trade-fields .ui-spinner-button.ui-spinner-up {
    margin-top: 0;
}
/*#endregion*/

.trade-fields ul {
    transition: padding-top 0.5s ease;
    list-style:none;
    margin: 0;
    padding: 3px 5px 0 5px;
    position: relative;
    display: flex;
    justify-content: center;
}

.trade-fields ul li { text-align: left; }
.trade-fields ul li:nth-child(1) { width:130px; }
.trade-fields ul li:nth-child(2n) { width:110px; }
.trade-fields ul li:nth-child(2n+3) { width:100px; }

.trade-fields ul li:nth-child(1) select + .ui-selectmenu-button { min-width: 120px !important; }

.trade-fields ul li:nth-child(2) select + .ui-selectmenu-button { width: 100px !important; }
.trade-fields ul li:nth-child(3) select + .ui-selectmenu-button { width: 100px !important; }

.trade-fields ul li:nth-child(2) input { width: 85px !important; }
.trade-fields ul li:nth-child(3) input { width: 85px !important; }

.trade-fields ul li:nth-child(2) input:not([step]) { width: 100px !important; }
.trade-fields ul li:nth-child(3) input:not([step]) { width: 100px !important; }

.trade-fields ul li select.date-start-select + .ui-selectmenu-button { width: 115px !important }

/*#region ul.contract-displays */
    .trade-fields ul.contract-displays {
        background: #c2c1c1;
        padding: 10px 0;
        margin: 5px 0 0 0;
    }

    .trade-fields ul.contract-displays li {
        opacity: .5;
        cursor: pointer;
        width: auto;
        padding: 0 7px;
    }

    .trade-fields ul.contract-displays li.active {
        opacity: 1;
        font-weight: bold;
    }

    .trade-fields ul.contract-displays li:before {
        content: " | ";
        opacity: .5;
        font-weight:normal;
    }
    .trade-fields ul.contract-displays li:first-child:before { content: none; }
/*#endregion*/

.trade-fields input.datepicker,
.trade-fields input.timepicker {
    margin-bottom: 5px;
}

.trade-fields ul li input.date-expiry-date { width: 100px; }
.trade-fields ul li input.date-expiry-hour { width: 95px; }

/* override timepciker styles */
.ui-timepicker-table td a {
    width: 1.1em !important;
    padding: .2em .4em !important;
    border: .1em solid #273051 !important;
}
.ui-timepicker-table td a.ui-state-active {
    color: orange;
    border: .1em solid orange !important;
    background: white;
    text-align:center;
}

.trade-fields .amount-per-point {
  width: 70px;
}

/* for elements that should stick to the buttom of dialog */
.trade-fields .stick-to-bottom {
  position: absolute;
  width: 100%;
  padding: 0;
}

.trade-fields .proposal-message {
    border-top: 1px solid #c2c1c1;
    bottom: 80px;
}

.trade-fields ul.message-row {
  bottom: 50px;
  padding: 2px 0;
}
.trade-fields ul.proposal-message li,
.trade-fields ul.message-row li {
  text-align: center;
  width:auto;
}

.trade-fields .netprofit { background: #c2c1c1; }
.trade-fields .spread-deposit {
    background: #c2c1c1;
    white-space: nowrap;
    font-size: 85%;
}

.trade-fields .purchase-row { bottom: 5px;}
.trade-fields .purchase-row li:nth-child(1) { position: absolute; left: 20px; width: 200px;}
.trade-fields .purchase-row li:nth-child(2) { left:90px; position: relative;}
.trade-fields .purchase-row li span { font-weight: bolder; font-size: larger;}
.trade-fields .purchase-button {
    background: #2e8836;
    border: none;
    border-radius: 5px;
    color: white;
    outline: 0;
    width: 120px;
}

.trade-fields ul li select.digits-select + .ui-selectmenu-button { width: 40px !important; }
.trade-fields ul li select.digits-select + .ui-selectmenu-button .ui-icon { right: 3px;}
.trade-fields ul li select.digits-select + .ui-selectmenu-button .ui-selectmenu-text { padding-left: 10px;}

/* ********************* Animated checkbox with CSS3 ****************/
label.checkbox {
  min-width: 80px;
  min-height: 2em;
  cursor:pointer;
  display: inline-block;
  position: relative;
  top:5px;
}
label.checkbox  input { display:none;}
label.checkbox span  {
  display:inline-block;
  position:absolute;
  height:18px;
  width:18px;
  transition-duration:0.3s;
}
label.checkbox span.text     {
  padding-top: 3px;
  padding-left: 40px;
}
label.checkbox span.box     {
  border:3px solid #273051;
  transition-delay:0.1s;
}
label.checkbox span.check  {
  top: -8px;
  left: 5px;
  width: 12px;
  height: 24px;
  border: none;
  border-style: none solid solid none;
  border-width: medium 4px 3px medium;
  border-color: #273051;
  opacity:0;
  transform:rotate(180deg);
  transition-delay:0.2s;
}
/* handling click events */
label.checkbox input:checked ~ span.box {
  opacity: 0;
  transform: scale(0) rotate(-180deg);
}
label.checkbox input:checked ~ span.check {
  opacity: 1;
  transform: scale(1) rotate(45deg);
}

